--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "embedded-resolve",
-  "version": "0.0.0",
+  "name": "hardware-resolve",
+  "version": "0.0.1",
   "description": "Resolves hardware dependencies in package.json",
   "main": "index.js",
   "directories": {
