Updates effess require

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hardware-resolve",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Resolves hardware dependencies in package.json",
   "main": "index.js",
   "directories": {
@@ -9,7 +9,7 @@
   "dependencies": {
     "minimatch": "~0.2.14",
     "osenv": "0.0.3",
-    "effess": "0.0.1"
+    "effess": "~0.0.2"
   },
   "devDependencies": {
     "tape": "~2.3.2"
