--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "hardware-resolve",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Resolves hardware dependencies in package.json",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
+  "repository": "tessel/hardware-resolve",
   "dependencies": {
     "minimatch": "~0.2.14",
     "osenv": "0.0.3",
